--- a/src/scss/components/contact/_contact.scss
+++ b/src/scss/components/contact/_contact.scss
@@ -49,21 +49,21 @@
     width: 100%;
 
     &.success {
-      background-color: #d4edda;
-      color: #155724;
-      border: 1px solid #c3e6cb;
+      background-color: $color-success-light;
+      color: $color-success-dark;
+      border: 1px solid $color-success;
     }
 
     &.error {
-      background-color: #f8d7da;
-      color: #721c24;
-      border: 1px solid #f5c6cb;
+      background-color: $color-error-light;
+      color: $color-error-dark;
+      border: 1px solid $color-error;
     }
 
     &.info {
-      background-color: #d1ecf1;
-      color: #0c5460;
-      border: 1px solid #bee5eb;
+      background-color: $color-info-light;
+      color: $color-info-dark;
+      border: 1px solid $color-info;
     }
   }
 
@@ -101,11 +101,11 @@
       gap: 12px;
       .btn {
         @include btn;
-        font-size: 14px;
+        font-size: $font-size-sm;
         white-space: nowrap;
         i {
           margin-right: 6px;
-          font-size: 16px;
+          font-size: $font-size-base;
           vertical-align: middle;
         }
       }
@@ -130,7 +130,7 @@
       label {
         font-weight: 600;
         color: $primary-dark;
-        font-size: 15px;
+        font-size: $font-size-base;
         width: 100%;
         i {
           margin-right: 6px;
@@ -232,11 +232,11 @@
   gap: 12px;
   .btn {
     @include btn;
-    font-size: 14px;
+    font-size: $font-size-sm;
     white-space: nowrap !important;
     i {
       margin-right: 6px;
-      font-size: 16px;
+      font-size: $font-size-base;
       vertical-align: middle;
     }
   }
