--- a/src/scss/utils/_modal.scss
+++ b/src/scss/utils/_modal.scss
@@ -118,7 +118,7 @@
   .tech-used {
     margin-top: 24px;
     padding-top: 20px;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-top: 1px solid $color-border-light;
 
     strong {
       display: block;
@@ -157,39 +157,39 @@
 
         i {
           font-size: 1rem;
-          // ...existing code for brand colors...
-          &.fa-react { color: #61DAFB; }
-          &.fa-js { color: #F7DF1E; }
-          &.fa-html5 { color: #E34F26; }
-          &.fa-css3-alt { color: #1572B6; }
-          &.fa-sass { color: #CC6699; }
-          &.fa-bootstrap { color: #7952B3; }
-          &.fa-node-js { color: #339933; }
-          &.fa-wordpress { color: #21759B; }
-          &.fa-figma { color: #F24E1E; }
-          &.fa-git-alt { color: #F05032; }
-          &.fa-gulp { color: #CF4647; }
-          &.fa-vuejs { color: #4FC08D; }
-          &.fa-php { color: #777BB4; }
-          &.fa-drupal { color: #0678BE; }
-          &.fa-photoshop { color: #31A8FF; }
-          &.fa-illustrator { color: #FF9A00; }
-          &.fa-indesign { color: #FF3366; }
-          &.fa-sketch { color: #F7B500; }
-          &.fa-github { color: #181717; }
-          &.fa-gitlab { color: #FC6D26; }
-          &.fa-npm { color: #CB3837; }
-          &.fa-yarn { color: #2C8EBB; }
-          &.fa-docker { color: #2496ED; }
-          &.fa-aws { color: #FF9900; }
-          &.fa-google { color: #4285F4; }
-          &.fa-microsoft { color: #00A1F1; }
-          &.fa-apple { color: #000000; }
-          &.fa-android { color: #3DDC84; }
-          &.fa-python { color: #3776AB; }
-          &.fa-java { color: #ED8B00; }
-          &.fa-angular { color: #DD0031; }
-          &.fa-laravel { color: #FF2D20; }
+          // Technology brand colors from design tokens
+          &.fa-react { color: $tech-react; }
+          &.fa-js { color: $tech-javascript; }
+          &.fa-html5 { color: $tech-html5; }
+          &.fa-css3-alt { color: $tech-css3; }
+          &.fa-sass { color: $tech-sass; }
+          &.fa-bootstrap { color: $tech-bootstrap; }
+          &.fa-node-js { color: $tech-node; }
+          &.fa-wordpress { color: $tech-wordpress; }
+          &.fa-figma { color: $tech-figma; }
+          &.fa-git-alt { color: $tech-git; }
+          &.fa-gulp { color: $tech-gulp; }
+          &.fa-vuejs { color: $tech-vue; }
+          &.fa-php { color: $tech-php; }
+          &.fa-drupal { color: $tech-drupal; }
+          &.fa-photoshop { color: $tech-photoshop; }
+          &.fa-illustrator { color: $tech-illustrator; }
+          &.fa-indesign { color: $tech-indesign; }
+          &.fa-sketch { color: $tech-sketch; }
+          &.fa-github { color: $tech-github; }
+          &.fa-gitlab { color: $tech-gitlab; }
+          &.fa-npm { color: $tech-npm; }
+          &.fa-yarn { color: $tech-yarn; }
+          &.fa-docker { color: $tech-docker; }
+          &.fa-aws { color: $tech-aws; }
+          &.fa-google { color: $tech-google; }
+          &.fa-microsoft { color: $tech-microsoft; }
+          &.fa-apple { color: $color-text-black; }
+          &.fa-android { color: $tech-android; }
+          &.fa-python { color: $tech-python; }
+          &.fa-java { color: $tech-java; }
+          &.fa-angular { color: $tech-angular; }
+          &.fa-laravel { color: $tech-laravel; }
         }
       }
     }
